[tool.poetry]
name = "moabb"
version = "1.2.0"
description = "Mother of All BCI Benchmarks"
authors = ["Alexandre Barachant", "Vinay Jayaram"]
maintainers = ["Sylvain Chevallier <sylvain.chevallier@universite-paris-saclay.fr>"]
readme = "README.md"
repository = "https://github.com/NeuroTechX/moabb"
documentation = "https://neurotechx.github.io/moabb"
keywords = ["eeg", "datasets", "reproducibility", "bci", "benchmark"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.22"
scipy = "^1.9.3"
mne = "^1.7.0"
pandas = ">=1.5.2"
h5py = "^3.10.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
pyriemann = "^0.7"
PyYAML = "^6.0"
pooch = "^1.6.0"
requests = "^2.28.1"
urllib3 = "^1.26.15"
tqdm = "^4.64.1"
coverage = "^7.0.1"
memory-profiler = "^0.61.0"
edflib-python = "^1.0.6"
edfio = "^0.4.2"
pytest = "^7.4.0"
mne-bids = ">=0.14"
scikit-learn = "<1.6"

# Optional dependencies for carbon emission
codecarbon = { version = "^2.1.4", optional = true }

# Optional dependencies for deep learning
tensorflow = { version = ">=2.16", optional = true }
keras = { version = ">=3.2.0", optional = true }
scikeras = { version = "^0.13.0", optional = true }
libclang = { version = "^15.0", optional = true }
optuna = { version = "^3.6.1", optional = true }
optuna-integration = { version = "^3.6.0", optional = true }
braindecode = { version = ">=0.8.1", optional = true }

# Optional dependencies for tests
pytest-cov = { version = ">=5.0.0", optional = true }
codecov = { version = ">=2.1.0", optional = true }
pytest_cases = { version = ">=3.0.0", optional = true }

# Optional dependencies for documentation
sphinx = { version = "^5.3.0", optional = true }
sphinx-gallery = { version = "^0.11.1", optional = true }
sphinx-bootstrap-theme = { version = "^0.8.1", optional = true }
pydata-sphinx-theme = { version = "^0.13.2", optional = true }
numpydoc = { version = "^1.5.0", optional = true }
m2r2 = { version = "^0.3.0", optional = true }
sphinx-design = { version = "^0.3.0", optional = true }
sphinx-rtd-theme = { version = "^1.2.0", optional = true }
sphinx_copybutton = { version = "^0.4.0", optional = true }
sphinxcontrib-bibtex = { version = "^2.2.0", optional = true }
sphinx-favicon = { version = "^1.0.1", optional = true }
tdlda = { git = "https://github.com/jsosulski/tdlda.git", optional = true }

[tool.poetry.extras]
carbonemission = ["codecarbon"]
deeplearning = ["tensorflow", "keras", "scikeras", "braindecode", "libclang"]
optuna = ["optuna", "optuna-integration"]
tests = ["pytest", "pytest-cov", "codecov", "pytest_cases"]
docs = [
  "sphinx",
  "sphinx-gallery",
  "sphinx-bootstrap-theme",
  "pydata-sphinx-theme",
  "numpydoc",
  "m2r2",
  "sphinx-design",
  "sphinx-rtd-theme",
  "sphinx_copybutton",
  "sphinxcontrib-bibtex",
  "sphinx-favicon"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["moabb"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
python_files = [
    "test_*.py",
]
