[tool.poetry]
name = "moabb"
version = "1.3.0"
description = "Mother of All BCI Benchmarks"
authors = ["Alexandre Barachant", "Vinay Jayaram"]
maintainers = ["Sylvain Chevallier <sylvain.chevallier@universite-paris-saclay.fr>"]
readme = "README.md"
repository = "https://github.com/NeuroTechX/moabb"
documentation = "https://neurotechx.github.io/moabb"
keywords = ["eeg", "datasets", "reproducibility", "bci", "benchmark"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=2.0"
scipy = "^1.9.3"
mne = "^1.10.0"
pandas = ">=1.5.2"
h5py = "^3.10.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
pyriemann = "^0.9"
PyYAML = "^6.0"
pooch = "^1.6.0"
requests = "^2.28.1"
urllib3 = "^1.26.15"
tqdm = "^4.64.1"
coverage = "^7.0.1"
memory-profiler = "^0.61.0"
edflib-python = "^1.0.6"
edfio = "^0.4.2"
pytest = "^8.3.5"
mne-bids = ">=0.16"
scikit-learn = "<1.6"

# Optional dependencies for carbon emission
codecarbon = { version = "^2.1.4", optional = true }

# Optional dependencies for deep learning
optuna = { version = "^3.6.1", optional = true }
optuna-integration = { version = "^3.6.0", optional = true }
braindecode = { version = ">=0.8.1", optional = true }

# Optional dependencies for tests
pytest-cov = { version = ">=5.0.0", optional = true }
codecov = { version = ">=2.1.0", optional = true }
pytest_cases = { version = ">=3.0.0", optional = true }
pytest-xdist = { version = ">=3.6.1", optional = true }

# Optional dependencies for documentation
sphinx = { version = "^8.1.3", optional = true }
sphinx-gallery = { version = "^0.18.0", optional = true }
sphinx-bootstrap-theme = { version = "^0.8.1", optional = true }
pydata-sphinx-theme = { version = "^0.16.1", optional = true }
numpydoc = { version = "^1.8.0", optional = true }
myst-parser  = { version = "^4.0.1", optional = true }
sphinx-design = { version = "^0.6.1", optional = true }
sphinx-rtd-theme = { version = "^3.0.2", optional = true }
sphinx_copybutton = { version = "^0.5.2", optional = true }
sphinxcontrib-bibtex = { version = "^2.6.3", optional = true }
sphinx-favicon = { version = "^1.0.1", optional = true }
mne-features = { version = "^0.3", optional = true }
snowballstemmer = { version = "<3", optional = true }

[tool.poetry.extras]
carbonemission = ["codecarbon"]
deeplearning = ["braindecode"]
optuna = ["optuna", "optuna-integration"]
tests = ["pytest", "pytest-cov", "codecov", "pytest_cases", "pytest-xdist"]
docs = ["Sphinx", "sphinx-gallery", "sphinx-bootstrap-theme", "pydata-sphinx-theme", "numpydoc", "myst-parser", "sphinx-design", "sphinx-rtd-theme", "sphinx_copybutton", "sphinxcontrib-bibtex", "sphinx-favicon", "mne-features", "snowballstemmer"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["moabb"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
python_files = [
    "test_*.py",
]
