[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "moabb.__version__"}

[project]
name = "moabb"
dynamic = ["version"]
description = "Mother of All BCI Benchmarks"
authors = [
    { name = "Alexandre Barachant" },
    { name = "Vinay Jayaram" },
]
maintainers = [
    { name = "Sylvain Chevallier", email = "sylvain.chevallier@universite-paris-saclay.fr" },
]
license = { text = "BSD-3-Clause" }
keywords = ["eeg", "datasets", "reproducibility", "bci", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.9.3",
    "mne>=1.10.0",
    "pandas>=1.5.2",
    "h5py>=3.10.0",
    "matplotlib>=3.6.2",
    "seaborn>=0.12.1",
    "pyriemann>=0.9",
    "PyYAML>=6.0",
    "pooch>=1.6.0",
    "requests>=2.28.1",
    "urllib3>=1.26.15",
    "tqdm>=4.64.1",
    "coverage>=7.0.1",
    "memory-profiler>=0.61.0",
    "edflib-python>=1.0.6",
    "edfio>=0.4.2",
    "pytest>=8.3.5",
    "mne-bids>=0.16",
    "scikit-learn>=1.6",
]

[project.urls]
homepage = "https://moabb.neurotechx.com/docs/index.html"
repository = "https://github.com/NeuroTechX/moabb"
documentation = "https://moabb.neurotechx.com/docs/index.html"

[project.optional-dependencies]
carbonemission = ["codecarbon>=2.1.4"]
deeplearning = ["braindecode>=0.8.1"]
optuna = ["optuna>=3.6.1", "optuna-integration>=3.6.0"]
tests = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "codecov>=2.1.0",
    "pytest_cases>=3.0.0",
    "pytest-xdist>=3.6.1",
]
docs = [
    "Sphinx>=8.1.3",
    "sphinx-gallery>=0.18.0",
    "sphinx-bootstrap-theme>=0.8.1",
    "pydata-sphinx-theme>=0.16.1",
    "numpydoc>=1.8.0",
    "myst-parser>=4.0.1",
    "sphinx-design>=0.6.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx_copybutton>=0.5.2",
    "sphinxcontrib-bibtex>=2.6.3",
    "sphinx-favicon>=1.0.1",
    "mne-features>=0.3",
    "snowballstemmer>=3.0.1",
]
all = [
    "moabb[carbonemission]",
    "moabb[deeplearning]",
    "moabb[optuna]",
    "moabb[tests]",
    "moabb[docs]",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["moabb*"]
exclude = []
namespaces = false

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["moabb"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
python_files = [
    "test_*.py",
]
[metadata]

[options]
include_package_data = True

[options.package_data]
* = moabb/datasets/summary_*.csv